--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,9 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
+  <!-- google map api -->
+  <script src="http://maps.google.com/maps/api/js?key=AIzaSyCV8ZTbK_U3V6SrRkY1NT34ndl8e3Wozbc"></script>
+
   <!-- cordova.js required for cordova apps (remove if not needed) -->
   <script src="cordova.js"></script>
 
