init firebase and menu navigation

--- a/src/pages/map/map.html
+++ b/src/pages/map/map.html
@@ -1,5 +1,8 @@
-<ion-header>
+<ion-header class="map-header">
   <ion-navbar>
+    <button ion-button menuToggle>
+      <ion-icon name="menu" item-left></ion-icon>
+    </button>
     <ion-title>
       Carte
     </ion-title>
