--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,21 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
+  
+  <script src="https://www.gstatic.com/firebasejs/5.3.1/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyBdqtambYlXQVy35aOMOZD64Aqd_e3vaXA",
+      authDomain: "ballin-203112.firebaseapp.com",
+      databaseURL: "https://ballin-203112.firebaseio.com",
+      projectId: "ballin-203112",
+      storageBucket: "ballin-203112.appspot.com",
+      messagingSenderId: "934593256703"
+    };
+    firebase.initializeApp(config);
+  </script>
+
   <!-- google map api -->
   <script src="http://maps.google.com/maps/api/js?key=AIzaSyCV8ZTbK_U3V6SrRkY1NT34ndl8e3Wozbc"></script>
 
