--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
   </script>
 
   <!-- google map api -->
-  <script src="http://maps.google.com/maps/api/js?key=AIzaSyCV8ZTbK_U3V6SrRkY1NT34ndl8e3Wozbc"></script>
+  <script src="http://maps.google.com/maps/api/js?key=Your api key"></script>
 
   <!-- cordova.js required for cordova apps (remove if not needed) -->
   <script src="cordova.js"></script>
